@@ -1,4 +1,5 @@
 NEXT:
+ * version information for plugins is displayed now when requested
 
 e2factory-2.3.4rc1
  * the plugin interface was extended to permit plugins to register
